/*
 * $Id: ChangeLog,v 1.3945 2005/03/15 22:31:00 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-03-16 16:45 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/w32/xcc.cf
    * some minor cleanups
  * xharbour/source/common/hbstr.c
    * add hack for XCC which gives differ results for:
         (double) iVal1 / (double) iVal1
      then:
         (double) iVal1 / iVal1
      It should resolve the problem with:
         local x:=2, y:=2.000
         ? x==y
      but IMHO XCC should not behave in such way.
      This problem were reported on xharbour.builder list.

2005-03-15 05:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/harbour.slx
    ! increase HB_INLINE to HB_INLINE_MAX ( default 999 )

  * source/compiler/hbslex.c
    ! touched to force compilation of harbour.slx

2005-03-15 04:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbcomp.h
  * source/compiler/harbour.c
  * source/compiler/harbour.slx
  * source/compiler/genc.c
    ! bug fix on processing many HB_INLINEs

2005-03-15 10:01 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * include/hbclass.ch
    * Corrected 1 matcher from <Message> to <!Message!>
  * source/pp/ppcore.c
    + Added explicit support for minimal matachers.
  * source/rtl/str2ptr.c
    + Added optional support for HB_IS_INT() and HB_IS_LONG() argument.
      ( i.e. WinAPI may forward string pointer as a WPARAM, or LPARAM argument)
  * source/rtl/win32ole.prg
    + Added hack in New() in the rare case that New() method is directed at the OLE Server itself.

2005-03-15 13:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/ct/disk.c
    ! more cast

2005-03-15 11:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/ct/disk.c
    ! type cast

2005-03-15 03:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/thread.c